Tweaked styling for a few spots that were still not showing correctly.

--- a/src/SteamProject/wwwroot/css/ShowMoreInfo.css
+++ b/src/SteamProject/wwwroot/css/ShowMoreInfo.css
@@ -1,34 +1,19 @@
 th, tr, td {
-    color: black;
+    color: white;
     width: 25%;
     border-color:black;
-}
-
-h3, h4, td {
-    color: #ffffff;
 }
 
 .card-title, .card-text {
     color: #fff;
 }
 
-.carousel-control-next-icon, .carousel-control-prev-icon {
-    background-color: #ffffff;
+h1, h2, h3, h4, p {
+    color: white;
 }
 
 body {
     background: linear-gradient(to left, #222731, #2f526e, #222731) !important;
-}
-
-p {
-    color: #fff;
-}
-
-footer {
-    display: flex;
-    height: 100px;
-    background-image: linear-gradient(180deg, #333333 0%, #000000 50%);
-    align-items: flex-end;
 }
 
 header {
